# serializer version: 1
# name: test_binary_sensors[binary_sensor.schwechat_automatic_thunderstorm_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_automatic_thunderstorm_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Automatic thunderstorm warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Automatic thunderstorm warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'auto_thunderstorm_warning',
    'unique_id': '30740-auto_thunderstorm_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_automatic_thunderstorm_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Automatic thunderstorm warning',
      'intensity': 2,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_automatic_thunderstorm_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_black_ice_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_black_ice_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Black ice warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Black ice warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'black_ice_warning',
    'unique_id': '30740-black_ice_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_black_ice_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Black ice warning',
      'warnings': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_black_ice_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_cold_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_cold_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Cold warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Cold warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cold_warning',
    'unique_id': '30740-cold_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_cold_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Cold warning',
      'warnings': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_cold_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_heat_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_heat_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heat warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Heat warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heat_warning',
    'unique_id': '30740-heat_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_heat_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Heat warning',
      'warnings': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_heat_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_rain_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_rain_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Rain warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Rain warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'rain_warning',
    'unique_id': '30740-rain_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_rain_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Rain warning',
      'warnings': list([
        dict({
          'end': '2023-03-28T16:00:00+00:00',
          'impacts': '* Local flooding is possible.',
          'level': 'yellow',
          'meteo_text': 'Persistent rain with amounts between 40 and 60 mm.',
          'recommendations': '* Avoid underpasses and flooded roads!',
          'start': '2023-03-28T06:00:00+00:00',
          'text': 'Yellow rain warning from Tue, 28.03.2023 08:00 until Tue, 28.03.2023 18:00',
        }),
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_rain_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_snow_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_snow_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Snow warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Snow warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'snow_warning',
    'unique_id': '30740-snow_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_snow_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Snow warning',
      'warnings': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_snow_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_storm_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_storm_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Storm warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Storm warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'storm_warning',
    'unique_id': '30740-storm_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_storm_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'end': '2023-03-27T16:00:00+00:00',
      'friendly_name': 'Schwechat Storm warning',
      'impacts': '* Branches may fall and objects may be thrown around.',
      'level': 'orange',
      'meteo_text': 'Strong northwest winds with gusts between 60 and 80 km/h.',
      'recommendations': '* Be careful in forests, parks and avenues!',
      'start': '2023-03-27T06:00:00+00:00',
      'text': 'Orange wind warning from Mon, 27.03.2023 08:00 until Mon, 27.03.2023 18:00',
      'warnings': list([
        dict({
          'end': '2023-03-27T16:00:00+00:00',
          'impacts': '* Branches may fall and objects may be thrown around.',
          'level': 'orange',
          'meteo_text': 'Strong northwest winds with gusts between 60 and 80 km/h.',
          'recommendations': '* Be careful in forests, parks and avenues!',
          'start': '2023-03-27T06:00:00+00:00',
          'text': 'Orange wind warning from Mon, 27.03.2023 08:00 until Mon, 27.03.2023 18:00',
        }),
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_storm_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_thunderstorm_warning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.schwechat_thunderstorm_warning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Thunderstorm warning',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.SAFETY: 'safety'>,
    'original_icon': None,
    'original_name': 'Thunderstorm warning',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'thunderstorm_warning',
    'unique_id': '30740-thunderstorm_warning',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.schwechat_thunderstorm_warning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'safety',
      'friendly_name': 'Schwechat Thunderstorm warning',
      'warnings': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.schwechat_thunderstorm_warning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
